--- a/minlogdpll.tex
+++ b/minlogdpll.tex
@@ -1,4 +1,4 @@
-\thesischapter{Extracting Verified Decisin Procedures in The Minlog System}
+\thesischapter{Extracting Verified Decision Procedures in the Minlog System}
 In the following chapter we describe how the completeness proofs from chapter \ref{} are implemented in the Minlog system and how Minlog can be used to extract programs from these proofs.  This begins with the definition of preliminary data types and operations described in chapter \ref{ } and followed by the implementation of the completeness of the DPLL proof system in Minlog. The program extracted from the completeness is described along with a description of how a unique feature of the Minlog system, namely \emph{non-computational quantifiers} have been used to remove redundant data and computations and obtain a more efficient extracted program.
 
 
